--- a/heavycenter/src/main/res/layout/act_main.xml
+++ b/heavycenter/src/main/res/layout/act_main.xml
@@ -26,6 +26,8 @@
                         android:layout_height="match_parent"/>
                 </RelativeLayout>
                 <com.android.lib.view.bottommenu.BottomMenuView
+                    android:elevation="2dp"
+                    android:background="@color/color_base"
                         android:layout_gravity="bottom"
                     android:id="@+id/bottommenu"
                     android:layout_width="match_parent"
@@ -35,7 +37,7 @@
                 android:layout_gravity="bottom"
                 android:layout_marginBottom="@dimen/dimens_base_bottom"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="2dp"
                 android:background="@drawable/actionbar_shadow_up" />
         </FrameLayout>
         <include
