--- a/heavycenter/src/main/res/layout/frag_main_map.xml
+++ b/heavycenter/src/main/res/layout/frag_main_map.xml
@@ -11,6 +11,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
                 android:id="@+id/title"
                 style_common:iv_left ="@drawable/icon_hv_person"
                 style_common:txt_mid ="地图"
