--- a/heavycenter/src/main/res/layout/frag_main_order_trans.xml
+++ b/heavycenter/src/main/res/layout/frag_main_order_trans.xml
@@ -13,6 +13,8 @@
         >
 
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
             android:id="@+id/title"
             style_common:iv_right ="@drawable/icon_hv_scan"
             style_common:txt_mid ="运输单"
