--- a/heavycenter/src/main/res/layout/frag_main_store.xml
+++ b/heavycenter/src/main/res/layout/frag_main_store.xml
@@ -12,6 +12,9 @@
         android:background="@color/color_block_back"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
+
+            android:elevation="2dp"
+            android:background="@color/color_base"
             android:id="@+id/title"
             app:txt_mid ="仓库"
             app:iv_left ="@drawable/icon_hv_person"
@@ -21,6 +24,7 @@
             android:layout_height="wrap_content"/>
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
             android:id="@+id/refresh"
+            app:srlEnableLoadmoreWhenContentNotFull="false"
             app:srlEnableOverScrollBounce="false"
             app:srlEnableAutoLoadmore="false"
             android:layout_width="match_parent"
