--- a/heavycenter/src/main/res/layout/frag_main_store_new.xml
+++ b/heavycenter/src/main/res/layout/frag_main_store_new.xml
@@ -12,6 +12,8 @@
         android:background="@color/color_base"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
             android:id="@+id/title"
             style_common:txt_mid ="仓库"
             style_common:iv_right = "@drawable/icon_hv_scan"
