--- a/heavycenter/src/main/res/layout/frag_main_trans.xml
+++ b/heavycenter/src/main/res/layout/frag_main_trans.xml
@@ -12,6 +12,8 @@
         android:background="@color/color_block_back"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
             android:id="@+id/title"
             app:iv_left ="@drawable/icon_hv_person"
             app:txt_mid ="运输单"
