--- a/heavycenter/src/main/res/layout/frag_main_trans_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_trans_detail.xml
@@ -15,6 +15,8 @@
         android:background="@color/white">
 
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
             android:id="@+id/title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
