--- a/heavycenter/src/main/res/layout/frag_main_weigts_detail.xml
+++ b/heavycenter/src/main/res/layout/frag_main_weigts_detail.xml
@@ -15,6 +15,8 @@
         >
 
     <com.android.lib.view.title.TitleView
+        android:elevation="2dp"
+        android:background="@color/color_base"
         android:id="@+id/title"
         style_common:iv_left ="@drawable/icon_hv_person"
         style_common:iv_right ="@drawable/icon_hv_scan"
