--- a/heavycenter/src/main/res/layout/frag_mana_car.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_car.xml
@@ -15,6 +15,8 @@
         >
 
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
                 android:visibility="gone"
             android:id="@+id/cartitle"
             style_common:txt_mid ="车辆列表"
