--- a/heavycenter/src/main/res/layout/frag_mana_car_new.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_car_new.xml
@@ -13,6 +13,8 @@
         android:orientation="vertical">
 
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
             android:id="@+id/title"
             style_common:iv_left ="@drawable/icon_hv_back"
             style_common:iv_right ="@drawable/icon_hv_scan"
