--- a/heavycenter/src/main/res/layout/frag_mana_store.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_store.xml
@@ -16,6 +16,8 @@
 
 
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
             android:id="@+id/title"
             style_common:txt_mid ="仓库管理"
             style_common:iv_left ="@drawable/icon_hv_back"
