--- a/heavycenter/src/main/res/layout/frag_mana_store_list.xml
+++ b/heavycenter/src/main/res/layout/frag_mana_store_list.xml
@@ -11,6 +11,8 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
             android:id="@+id/title"
             style_common:txt_mid ="仓库列表"
             style_common:iv_right ="@drawable/icon_scan"
