--- a/heavycenter/src/main/res/layout/frag_myce_name.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_name.xml
@@ -13,6 +13,8 @@
         android:clickable="true"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
             android:id="@+id/title"
             style_common:txt_mid ="编辑个人信息"
             style_common:iv_left ="@drawable/icon_hv_back"
