--- a/heavycenter/src/main/res/layout/frag_myce_unit_info.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_info.xml
@@ -13,6 +13,8 @@
         android:background="@color/white"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
             android:id="@+id/title"
             style_common:txt_mid ="单位信息"
             style_common:boo_edit = "false"
