--- a/heavycenter/src/main/res/layout/frag_myce_unit_list.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_list.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:style_common="http://schemas.android.com/apk/res-auto"
-    xmlns:SmartRefreshLayout="http://schemas.android.com/apk/res-auto">
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
     <data>
         <variable
             name="frag_myce_unit_list"
@@ -13,24 +12,30 @@
         android:background="@color/white"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
             android:id="@+id/title"
-            style_common:txt_mid ="绑定单位"
-            style_common:iv_right ="@drawable/icon_hv_scan"
-            style_common:iv_right2 ="@drawable/icon_hv_add"
-            style_common:iv_left ="@drawable/icon_hv_back"
+            app:txt_mid ="绑定单位"
+            app:iv_right ="@drawable/icon_hv_scan"
+            app:iv_right2 ="@drawable/icon_hv_add"
+            app:iv_left ="@drawable/icon_hv_back"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
         <com.siweisoft.heavycenter.module.view.input.SearchBindUnitMyceItem
+            android:layout_marginTop="5dp"
             android:id="@+id/search"
             android:elevation="2dp"
-            android:text="请输入单位名称"
+            app:txt_mid = "请输入单位名称"
             android:layout_width="match_parent"
-            android:layout_height="50dp"
+            android:layout_height="wrap_content"
         />
 
         <com.scwang.smartrefresh.layout.SmartRefreshLayout
-            SmartRefreshLayout:srlEnableLoadmore="false"
+            app:srlDragRate= "0.2"
+            app:srlEnableLoadmoreWhenContentNotFull="false"
+            app:srlEnableOverScrollBounce="false"
+            app:srlEnableLoadmore="false"
             android:id="@+id/refresh"
             android:layout_width="match_parent"
             android:layout_height="match_parent">
