--- a/heavycenter/src/main/res/layout/frag_myce_unit_new.xml
+++ b/heavycenter/src/main/res/layout/frag_myce_unit_new.xml
@@ -13,6 +13,8 @@
         android:background="@color/white"
         android:orientation="vertical">
         <com.android.lib.view.title.TitleView
+            android:elevation="2dp"
+            android:background="@color/color_base"
             android:id="@+id/title"
             style_common:iv_right2="@drawable/icon_hv_save"
             style_common:txt_mid ="新建单位"
