--- a/heavycenter/src/main/res/layout/frag_scan_info.xml
+++ b/heavycenter/src/main/res/layout/frag_scan_info.xml
@@ -7,6 +7,7 @@
     </data>
 
     <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/rl_scan_info"
         android:background="#e0000000"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -14,6 +15,7 @@
 
 
         <LinearLayout
+            android:id="@+id/ll_a"
             android:layout_marginLeft="25dp"
             android:layout_marginRight="25dp"
             android:background="@drawable/bg_hv_sharp5_white_solid"
@@ -24,12 +26,12 @@
 
             <ImageView
                 android:id="@+id/iv_close"
-                android:layout_marginRight="5dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginRight="10dp"
+                android:layout_marginTop="10dp"
                 android:layout_gravity="right|center_vertical"
                 android:src="@drawable/icon_hv_close"
-                android:layout_width="20dp"
-                android:layout_height="20dp" />
+                android:layout_width="21dp"
+                android:layout_height="21dp" />
 
         <LinearLayout
             android:paddingLeft="40dp"
@@ -45,13 +47,13 @@
 
 
             <TextView
-                android:textSize="22sp"
+                android:textSize="24sp"
                 android:textColor="@color/black"
                 android:text="@{frag_scan_info.trueName}"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" />
             <TextView
-                android:textSize="12sp"
+                android:textSize="13sp"
                 android:textColor="@color/color_grey_600"
                 android:layout_marginTop="1dp"
                 android:text="@{frag_scan_info.tel}"
@@ -59,7 +61,7 @@
                 android:layout_height="wrap_content" />
 
             <TextView
-                android:textSize="12sp"
+                android:textSize="13sp"
                 android:textColor="@color/color_grey_600"
                 android:layout_marginTop="1dp"
                 android:text="@{frag_scan_info.companyName}"
@@ -69,11 +71,11 @@
             <ImageView
                 android:id="@+id/iv_scan"
                 android:layout_marginTop="20dp"
-                android:layout_width="180dp"
-                android:layout_height="180dp" />
+                android:layout_width="200dp"
+                android:layout_height="200dp" />
 
             <TextView
-                android:textSize="14sp"
+                android:textSize="16sp"
                 android:textColor="@color/black"
                 android:layout_marginTop="20dp"
                 android:text="扫一扫我的二维码"
