--- a/heavycenter/src/main/res/layout/item_myce_unit_bind.xml
+++ b/heavycenter/src/main/res/layout/item_myce_unit_bind.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout>
+<layout xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <variable
@@ -7,55 +7,56 @@
             type="com.siweisoft.heavycenter.data.netd.unit.list.UnitInfo" />
     </data>
 
-    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.constraint.ConstraintLayout
+        android:background="@color/white"
+        android:foreground="?android:attr/selectableItemBackground"
+        xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
-        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-            android:orientation="horizontal"
-            android:background="@drawable/drawable_press_blue_while"
-            android:layout_width="match_parent"
-            android:paddingTop="10dp"
-            android:paddingLeft="10dp"
-            android:paddingRight="10dp"
-            android:paddingBottom="10dp"
-            android:foreground="?android:attr/selectableItemBackground"
-            android:layout_height="wrap_content">
 
-            <ImageView
-                android:id="@+id/iv_sel"
-                android:background="@drawable/bg_hv_check"
-                android:layout_width="15dp"
-                android:layout_height="15dp" />
-            <LinearLayout
-                android:layout_marginLeft="10dp"
-                android:layout_gravity="center_vertical"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-                <TextView
-                    android:textSize="18sp"
-                    android:textColor="@color/color_grey_900"
-                    android:text="@{item_myce_unit_bind.companyName}"
-                    android:id="@+id/tv_com_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
+        <ImageView
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:layout_marginLeft="10dp"
+            android:layout_marginTop="15dp"
+            android:id="@+id/iv_sel"
+            android:background="@drawable/bg_hv_check"
+            android:layout_width="17dp"
+            android:layout_height="17dp" />
 
-                <TextView
-                    android:layout_marginTop="10dp"
-                    android:textSize="18sp"
-                    android:textColor="@color/gray"
-                    android:text="@{item_myce_unit_bind.contactName}"
-                    android:id="@+id/tv_mana_name"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" />
-            </LinearLayout>
-        </LinearLayout>
+
+        <TextView
+            android:gravity="bottom"
+            android:layout_marginLeft="15dp"
+            app:layout_constraintBottom_toBottomOf="@+id/iv_sel"
+            app:layout_constraintLeft_toRightOf="@+id/iv_sel"
+            android:textSize="17sp"
+            android:textColor="@color/color_grey_900"
+            android:text="@{item_myce_unit_bind.companyName}"
+            android:id="@+id/tv_com_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:gravity="bottom"
+            app:layout_constraintTop_toBottomOf="@+id/tv_com_name"
+            app:layout_constraintLeft_toLeftOf="@+id/tv_com_name"
+            android:textSize="17sp"
+            android:textColor="@color/gray"
+            android:text="@{item_myce_unit_bind.contactName}"
+            android:id="@+id/tv_mana_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
         <View
-            android:layout_alignParentBottom="true"
+            android:layout_marginTop="15dp"
+            app:layout_constraintTop_toBottomOf="@+id/tv_mana_name"
+            app:layout_constraintLeft_toLeftOf="parent"
             android:layout_marginLeft="8dp"
             android:id="@+id/divide"
             android:background="@color/color_item_content_gap"
             android:layout_width="match_parent"
             android:layout_height="@dimen/dimen_item_content_gap_size"/>
-    </RelativeLayout>
+
+    </android.support.constraint.ConstraintLayout>
 </layout>
